Revisited version with UI

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0" />
+    <title>Rock Paper Scissors</title>
+  </head>
+  <body>
+    <div>
+      <h2>Choose your input</h2>
+      <div>
+        <button class="playerButton" id="0">Rock</button>
+        <button class="playerButton" id="1">Paper</button>
+        <button class="playerButton" id="2">Scissors</button>
+      </div>
+    </div>
+
+    <div>
+      <h2>Results</h2>
+      <p class="log"></p>
+      <p class="score"></p>
+    </div>
+    
     <script src="logic.js"></script>
-    <meta name="viewport" content="initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-</body>
+  </body>
 </html>
